Add example homepage link and validation screenshot
- Add link to example homepage (index.html) in onboarding doc
- Include valid_html.png screenshot showing successful HTML validation
- Update index.html with MP4 video format and improved structure
- Add media assets: audio (WAV), video (MP4, OGG), and validation screenshot

--- a/index.html
+++ b/index.html
@@ -1,19 +1,41 @@
-<main> - Wrap your main content
-</main>
-    <p> - Add paragraphs describing yourself
-    <header> - Include a header section
-    <footer> - Add a footer
-    <ul> - Create an unordered list (e.g., for hobbies)
-    <ol> - Create an ordered list (e.g., for favorite things)
-    <a> - Add at least one link
-    Content to include:
-    
-    Your name
-    Your age
-    Your location
-    Your hobbies
-    A picture of yourself
-    Bonus points for using:
-    
-    <audio> - Embed an audio file
-    <video> - Embed a video file
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Carlos Gabriel Cardona</title>
+    </head>
+    <body>
+        <header>
+            <h1>Carlos Gabriel Cardona</h1>
+        </header>
+        <main> 
+        <p>
+            My name is Carlos Gabriel Cardona.
+        </p>
+        <ul>
+            <li>An ordered Item (with an anchor tag): <a href="https://tellurstori.com">TellUrStori</a></li>
+            <li>A second ordered Item</li>
+            <li>A Third ordered Item</li>
+        </ul>
+        <ol>
+            <li>An unordered Thing</li>
+            <li>Another unordered Thing</li>
+            <li>A final unordered Thing</li>
+        </ol>
+        <p>
+            MultiMedia
+            <p>
+            <p>Audio</p>
+            <audio controls><source src="assets/gen_de0da1f9be81.wav" type="audio/wav"></audio>
+            <p>
+            <p>Video</p>
+            <video id="video1" style="width:600px;max-width:100%;" controls="">
+                <source src="assets/mov_bbb.mp4" type="video/mp4">
+                <source src="assets/mov_bbb.ogg" type="video/ogg">
+                Your browser does not support HTML5 video.
+            </video>
+        </main>
+        <footer>
+            <p>Copyright 2025 Carlos Gabriel Cardona</p>
+       </footer>
+    </body>
+</html>
