--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <ul>
             <li>An ordered Item (with an anchor tag): <a href="https://tellurstori.com">TellUrStori</a></li>
             <li>A second ordered Item</li>
-            <li>A Third ordered Item</li>
+            <li>A third ordered Item</li>
         </ul>
         <ol>
             <li>An unordered Thing</li>
