Add comprehensive README and update example homepage
- Flesh out README with detailed repository overview
- Add contents section explaining all files and assets
- Include getting started instructions and learning approach
- Add author information and license reference
- Update index.html with new image asset

--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
         </header>
         <main> 
         <p>
-            My name is Carlos Gabriel Cardona.
+            My name is Carlos Gabriel Cardona and I'm 44 years young.
+        </p>
+        <p>
+            <img src="assets/me.jpg" alt="Carlos Gabriel Cardona" width="400" height="400">
         </p>
         <ul>
-            <li>An ordered Item (with an anchor tag): <a href="https://tellurstori.com">TellUrStori</a></li>
-            <li>A second ordered Item</li>
-            <li>A third ordered Item</li>
+            <li>I'm building: <a href="https://tellurstori.com">TellUrStori</a>.</li>
+            <li>San Francisco, CA is the city I live in.</li>
+            <li>I enjoy making music and writing code.</li>
         </ul>
         <ol>
             <li>An unordered Thing</li>
